modify computer and player grid attributes for better navigation and identification

--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
             <head>
                 The battleship game
             </head>
-            <button>start</button>
+            <button class="startBtn">start</button>
         </nav>
         <div class="container">
             
